DigIt CHANGE LOG
======================

2024/12/
        06 Commented Destinations (until I think how);
	   Deleted all code with my allocation of PChars in the interfaces;
	   Added Value_Next in Counter and use it in MainForm;
	   Cleaning residual code;
	   UI adjustments due to longer Italian words.
        05 Use resourcestring for Languages support; Some UI adjustments
        04 Added PDF Export
        02 Moved Select of Source/Destination from MainForm to Bridge Implementation;
	   Deleted our creation of strings in Bridge (callers create the PChar);
	   Modified Params of UI_Title const to out;
	   First PDF write tests;

2024/11/
        29 Added Source and Destination properties to Main Form;
	   Writed BuildDuplex Wizard.
        27 Changed the SourceFiles array to Record TSourceFile (added the Crop field);
	   Added CropGoNext (without Cropping), ClearQueue, BuildDuplex  actions;
	   Writed TakeAgain action;
	   Check of put it in the middle Crop (to write);
	   Adjustments in Custom Crop logic;
	   Added BuildDuplex  Wizard (to write).
        26 Added a separate Crop Toolbar (minchia alignments when using ToolButton.Visible);
	   Finished Custom Crop logic;
	   Added Take Again and Take Front Back (to write)
        25 Several UI adjustments;
	   Completed write of Custom Crop (to be tested thoroughly)
	22 Several UI adjustments;
	   First write of Custom Crop Logic (to be completed and tested thoroughly)
        21 Added Counters RemoveAllButFirst;
	   Changed GetCurrentCounter to work with CropMode;
	   Changed Temp Path Location to Path_Config\tmp;
	   Added Progress to Crop_Full;
	   Use of DeleteDirectory to Delete Temp Files in Source_WIA.
        20 Adjusted UI Enable,Fill,etc in Main Form;
	   Added Progress Interface in Bridge;
	   Implemented Progress Interface in new Form_Progress;
	   Commented Source_WIA Set Pages=1 in preview (strange Brother Scanner behaviour)
	19 Added SourceFiles_Add, CropFile_Full methods;