@@ -15,7 +15,7 @@ interface
 uses
   {$ifdef WINDOWS}
     Digit_Source_WIA,
-  //Digit_Source_Twain,
+  Digit_Source_Twain,
   {$endif}
   {$ifdef LINUX}
   {$endif}
