@@ -1,0 +1,9 @@
+[RestoreInformation]
+DriverDesc=WSD Print Device
+DriverVersion=10.0.19041.3636
+DriverDate=6-21-2006
+DriverProvider=Microsoft
+DriverClass=WSDPrintDevice
+DriverInfPath=wsdprint.inf
+DriverInfSection=WSDPrint_Device.NT
+DriverHardwareID=UMB\http://schemas.microsoft.com/windows/2006/08/wdp/print/PrinterServiceType
