@@ -1,0 +1,9 @@
+[RestoreInformation]
+DriverDesc=Dispositivo di digitalizzazione WSD
+DriverVersion=10.0.19041.4355
+DriverDate=6-21-2006
+DriverProvider=Microsoft
+DriverClass=Image
+DriverInfPath=wsdscdrv.inf
+DriverInfSection=WSDScanDriver.Device
+DriverHardwareID=umb\http://schemas.microsoft.com/windows/2006/08/wdp/scan/scannerservicetype
