@@ -2,6 +2,8 @@ DigIt CHANGE LOG
 ======================
 
 2024/12/
+        12 First Porting of Source_Twain to new interfaces structure;
+	   Added Drivers file for WSD Scanners;
         06 Commented Destinations (until I think how);
 	   Deleted all code with my allocation of PChars in the interfaces;
 	   Added Value_Next in Counter and use it in MainForm;
